Update: Take Home Exercise 1

--- a/Take-home_Ex/Take-home_Ex01/Take-home_Ex01.qmd
+++ b/Take-home_Ex/Take-home_Ex01/Take-home_Ex01.qmd
@@ -955,6 +955,8 @@ Notably, conflict events tend to be concentrated around major road networks, ind
 :::
 :::
 
+# Learnings/Reflections
+
 ::: panel-tabset
 ## Learnings
 
