--- a/Notes/Lesson_6.qmd
+++ b/Notes/Lesson_6.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Notes 5"
-subtitle: "Spatial Weights and Applications"
+title: "Notes 6"
+subtitle: "Global and Local Measures of Spatial Autocorrelation"
 author: "Kai Feng"
-date: "Sept 16, 2024"
+date: "Sept 24, 2024"
 date-modified: "last-modified"
 execute:
   eval: true
@@ -10,180 +10,340 @@ execute:
   freeze: true
 ---
 
-## Spatial Weights *(wij)*
+<br/><br/>
 
--   A way to define spatial neighbourhood
+## **Tobler's First Law of Geography**
 
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-6.jpg){width="375"}
+`“Everything is related to everything else, but near things are more related than distant things.”`
 
-::: callout-note
-## Note
+## **Spatial Dependency**
 
-It measure from centroid!
+-   refers to the way that the value of a variable at one location is influenced by values at neighboring locations
 
-Need to clean data properly. EG. If we only need to find the childcare in SG, we should remove the outer island, else u might see centroid being not in the center of where you expect it
-:::
+-   highlights the interconnectedness of spatial data
+
+-   Similar values are likely to cluster than randomly distributed
+
+## **Types of Autocorrelation**
+
+-   **Positive Autocorrelation**:high rainfall areas likely to be near other high rainfall areas
+
+-   **Negative Autocorrleation:** eg. a region where high property values are next to areas of low property values.
 
 <br/><br/>
 
-# Defining Spatial Weights
+## **Local VS Global Measures**
+
+Global
+
+-   Summary for entire area. Eg, Overall, are crime rates clumped together or not
+
+Local
+
+-   Zoom on specific area. Eg. Where exactly are clusters or unusal spots in this area
+
+<br/><br/>
+
+# **Global Spatial Autocorrelation**
+
+## Measures of Global Spatial Autocorrelation
+
+::: callout-note
+\* Can use both together -\> if Moran’s I shows clustering + Geary’s C indicate low differences between neighbors = strengthen the conclusion that there’s a strong spatial pattern
+
+The 2 measures are inversely related -\> High C correspond to Low I
+:::
 
 ::: panel-tabset
-## Adjacency Criterion
+## Moran’s I
 
--   defines spatial weights based on if spatial units are physically contiguous or share a boundary or point of contact.
+broad view of overall spatial patterns—are similar values clustered or dispersed?
 
-**Types:**
+-   Negative (I \<0) -\> Dissimilar values, eg. High value next to low value
 
--   Rook's Case: Units share a common edge (horizontally or vertically).
+-   Positive (I\>0) -\> Lots of similar values nearby, eg high temp areas near each other
 
--   Bishop's Case: Units share a corner (diagonally).
+-   Close to 0 -\> No real pattern
 
--   Queen's Case: Units share either an edge or a corner, encompassing both Rook’s and Bishop’s cases.
+## Geary’s c
 
-**Characteristics:**
+local differences between neighbors—how similar or different are individual locations from their immediate surroundings?
 
--   Binary Matrix: weights are either 1 (adjacent) or 0 (not adjacent).
+-   Small c (\<1) -\> neighbours are similar -**Clustered**
 
--   Straightforward and easy to interpret.
+-   (C = 1) -\> observations are arranged randomly over space
 
--   Applicability: Useful for grid-based data, like raster data or when spatial units are laid out in a regular pattern. Applications: Often used in grid-based spatial models and geographic information systems (GIS) where spatial units are aligned in a regular pattern.
-
-![](images/clipboard-2503288394.png){width="588"}
-
-## Distance Criterion
-
--   defines spatial weights based on the distance between spatial units. (calculate the distance between the centroids or the nearest boundaries of the units)
-
-**Types:**
-
--   **Fixed Distance:** Weights are assigned based on whether the distance between units is less than a specified threshold. For instance, units within 10 kilometers might be assigned a weight of 1, while others get a weight of 0.
-
--   **Distance Decay:** Weights decrease with increasing distance, often following a specific functional form like the inverse of distance or a Gaussian function.
-
-**Characteristics:**
-
--   **Continuous Matrix:** Results in a matrix where weights can vary continuously depending on the distance, not just a binary 1 or 0.
-
--   **Flexibility:** Can handle irregular patterns and non-grid-based data.
-
--   **Complexity:** Requires distance calculations and can be more computationally intensive.
-
-**Applications:** Useful in analyses where spatial units are not uniformly distributed, such as in ecological studies or when analyzing spatial interactions over varying distances.
-
-![](images/clipboard-3469777781.png){width="592"}
-
-## General Spatial Distance weight matrices
-
--   it generalize the distance criterion by allowing for various forms of distance-based weighting and are not restricted to binary or simple fixed-distance schemes.
-
-**Types:**
-
--   **Inverse Distance Weighting (IDW):** Weights are inversely proportional to the distance.
-
--   **Gaussian Weighting:** Weights are based on a Gaussian function of the distance.
-
--   **K-nearest Neighbors (KNN):** Weights are assigned to the k nearest neighbors of each unit. This can be used to ensure a fixed number of neighbors regardless of distance.
-
-**Characteristics:**
-
--   **Versatility:** Can accommodate various forms of distance relationships and decay functions.
-
--   **Customizability:** Allows for fine-tuning of spatial relationships based on the specific needs of the analysis.
-
--   **Complexity:** Can involve more complex calculations and parameter tuning.
-
-**Applications:** Suitable for a range of spatial models, including those needing flexible distance-weighting schemes or when the relationship between spatial units is not strictly binary.
-
-![](images/clipboard-948209757.png){width="584"}
+-   Large c (\> 1) -\> neighbours are very different from u **-Dispersed**
 :::
-
-<br/><br/>
-
-# Contiguity Neighbours
-
--   Contiguity (common/shared boundary)
-
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-8.jpg){width="539"}
-
-<br/><br/>
-
-### Have 2nd, 3rd, 4th etc contiguity
-
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-18.jpg){width="435"}
-
-<br/><br/>
-
-### Weights matrix: 
 
 ::: panel-tabset
-## Adjacency-based neighbours
+## Z-Score
 
-Neighbour(s) of area 1202 using Rook case
+-   See how far away a value is from the avg(mean) in S.D.
 
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-9.jpg){width="476"}
+-   High score = value is much higher than avg
 
-::: callout-important
-Do not include urself in the calculation
+## P-value
+
+-   Help to  decide if result are significant or due to chance
+
+-   Low p = unlikely to happen by chance, so reject null hypo
+
+-   Fail to reject null hypo if p-value \> alpha value (0.05)**\[95% confidence\]**
+
+## Spatial Randomness (Null Hypo)
+
+-   Assumes the value at 1 place doesn’t depend on any value nearby
+
+-   So, moving values around won’t change the overall info
 :::
-
-## Distance-based neighbours
-
-Weights matrix for d = 650
-
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-10.jpg){width="616"}
-
-## Mesaured distance
-
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-11.jpg)
 
 ::: callout-note
-Same as Distance-based neighbours, but inverse
-:::
+## If your Data violates assumptions
+
+If Moran’s I and Geary’s C aren’t true, can use Monte Carlo simulation
+
+-   Simulate Moran’s I many times with the assumption that there’s no pattern
+
+-   Assigning all regions the mean value
+
+-   Calculate Moran’s I
+
+-   Compare it with Actual Moran’s I value to get a p-value
 :::
 
-::: callout-tip
-### For Point, there is no boundary, it is shared
+<br/>
+
+## Measures of Global High/Low Clustering: Getis-Ord Global G
+
+-   measures how clustered/spread out high & low values are among neighbouring areas.
+
+-   The variables must contain only positive
+
+-   If **P-Value Not Significant (High P-value)**: can’t reject the null hypothesis. The pattern could just be random.
+
+-   If **P-Value Significant (Low P-value):** can reject null hypo
+
+    -   \+ Z score -\> High values are more clustered together than expected by chance.
+
+    -   \- Z score -\> Low values are more clustered together than expected by chance.
+
+<br/><br/>
+
+# **Local Spatial Autocorrelation**
+
+## Local Spatial Autocorrelation Statistics
+
+-   to understand the distribution patterns.
+
+-   Uses methods focusing on identifying **how attribute values** (eg. crime rates, disease incidence) **are spatially related** to each other **across different locations**, **revealing spatial clusters/anomalies**
+
+-   Common methods:
+
+    ::: panel-tabset
+    ## Local Moran’s I
+
+    -   Identifies clusters of similar values (high-high or low-low) or spatial outliers (high-low or low-high).
+
+    -   Indicates if a location has attribute values similar to its neighbors
+
+    <br/>
+
+    **Interpretation of Local Moran**
+
+    -   **Outlier:** if it has low values while surrounding have high values
+
+    -   **Cluster:** You and surrounding areas have high values
+
+    -   **P-value** need to be **small** enough for cluster/outlier to be considered **Statistically Significant**
+
+    -   alpha-values are 0.1(90%), 0.05 (95%), 0.01 (99%), 0.001 (99.9%) confidence intervals
+
+    ## Local Geary’s c
+
+    -   Similar to Local Moran's I but focuses more on differences between adjacent locations
+
+    -   Used to detect local spatial heterogeneity
+
+    ## Getis-Ord Gi\*
+
+    -   Identifies hot spots, cold spots Area Analysis **(HCSA)**
+
+    -   Useful to detect areas with significantly high or low attribute values
+
+    <br/>
+
+    ![](https://is415-ay2024-25t1.netlify.app/lesson/lesson06/img/image7-18.jpg){width="288"}
+
+    ::: callout-note
+    With \* consider observation itself
+    :::
+    :::
+
+-   Use case: Detect clusters/outliers, hot spot or cold spot, patterns in data that don't change over distance
+
+<br/>
+
+## Local Indicator of Spatial Association (LISA)
+
+-   help to find clusters/unusual areas in a specific area & ensure it align with the overall trend of the entire area -\> When you add up all the LISA values, it should reflect overall pattern of the entire area
+
+-   Detecting Spatial Clusters & Outliers:
+
+    -   calculate local statistic value, a Z-score, a P-value, a code representing cluster type for each statistically significance of the computed index values
+
+![](https://is415-ay2024-25t1.netlify.app/lesson/lesson06/img/image7-10.jpg){fig-align="center"}
+
+<br/>
+
+## Fixed VS Adaptive Weighting Scheme
+
+::: panel-tabset
+## Fixed Weighting Scheme
+
+![](https://is415-ay2024-25t1.netlify.app/lesson/lesson06/img/image7-20.jpg)
+
+-   Uses a set distance to determine neighbors for each feature.
+
+-   **Considerations:**
+
+    -   Every feature should have at least one neighbor within this distance.
+
+    -   No feature should have *all* other features as neighbors (the distance shouldn’t be too large).
+
+    -   Ideally, each feature should have around 8 neighbors to get reliable results.
+
+        **Issues:**
+
+        -   In areas with few data points, estimates can be unreliable.
+
+        -   In dense areas, this scheme might miss small local patterns.
+
+        -   In very sparse areas, it might not work at all because there aren't enough neighbors to analyze properly.
+
+## Adaptive Weighting Scheme
+
+![](https://is415-ay2024-25t1.netlify.app/lesson/lesson06/img/image7-21.jpg)
+
+-   Adjusts the distance based on data density.
+
+-   **Features:**
+
+    -   In dense areas, the "neighborhood" is smaller to capture local variations.
+
+    -   In sparse areas, the "neighborhood" is larger to include enough neighbors.
+
+    -   Often, this scheme uses the nearest number of neighbors instead of a fixed distance. This makes it more flexible and accurate in varied data densities.
+:::
+
+## Best Practice Guidelines
+
+::: panel-tabset
+## To get Reliable Results
+
+-   Ensure your dataset has at least 30 features.
+
+-   Use continuous numeric data (e.g., counts, rates). Avoid categorical data.
+
+## Choosing a Spatial Weighting Method
+
+-   **Polygon Contiguity:**
+
+    -   Good for similar-sized polygons.
+
+    -   Works when spatial interaction is stronger between neighboring polygons.
+
+    -   Use “row standardization” to balance the influence of polygons with different numbers of neighbors.
+
+-   **Fixed Distance:**
+
+    -   Ideal for point data or polygons with varying sizes.
+
+    -   Ensures consistent analysis by maintaining the same distance for all points.
+
+<!-- -->
+
+-   **Inverse Distance:**
+
+    -   Suitable for continuous data or processes where closer features interact more.
+
+    -   Can be computationally heavy because every feature can be a neighbor to every other feature.
+
+-   **K-Nearest Neighbors:**
+
+    -   Guarantees a minimum number of neighbors for each feature.
+
+    -   Useful when data values are skewed, ensuring context with at least eight neighbors.
+
+    -   Adjusts for varying feature distribution, adapting to sparse or dense areas.
+
+    -   Focuses on the number of neighbors, not fixed distance.
+
+## Choosing a Fixed-Distance Band
+
+-   Select a distance based on the spatial scale of the phenomenon you’re studying.
+
+-   Ensure all features have at least one neighbor within this distance.
+
+-   Don't worry about finding a single "correct" distance—multiple processes can influence clustering.
+
+-   Avoid making every feature a neighbor to all others.
+
+-   For skewed data, aim for each feature to have about eight neighbors.
 :::
 
 <br/><br/>
 
-# Row standardisation
+# **Emerging Hot Spot Analysis (EHSA)**
 
-In practice, we will use this instead of spatial weights
+Combines both **Hot Spot Analysis + Mann-Kendall Test**
 
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-12.jpg){width="503"}
+## Mann-Kendall Test for Trend
 
-::: callout-note
-Can use either row/col standardisation, it will give the same result
-:::
+-   **Purpose**: Determines if a set of values is increasing, decreasing, or stable over time.
 
-# Applications of Spatial Weights
+-   **Non-Parametric**: Works for any data distribution (doesn’t need to be normal).
 
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-17.jpg){width="405"}
+-   **No Serial Correlation**: Your data points should not be influenced by previous values in the series.
 
-::: callout-note
-You are calculating the avg weight of ur neighbours, excluding yourself
-:::
+-   **Hypotheses:**
 
-### Spatially Lagged Variables
+    -   **Null Hypothesis**: No trend exists (values are stable over time).
 
-Spatial Lag with row-standardized weights
+    -   **Alternative Hypothesis**: A trend exists (values are consistently increasing or decreasing).
 
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-19.png){width="663"}
+-   **Limitations:**
 
-### Spatially Window Sum
+    -   It detects the direction of the trend but not how big the change is.
 
--   uses and includes the diagonal element.
+    -   Needs at least 8-10 data points for reliable results. Fewer points increase the risk of missing real trends.
 
-![](https://is415-ay2024-25t1.netlify.app/lesson/lesson05/img/image6-20.png){width="658"}
+-   Data Requirements for Mann-Kendall Test:
 
-::: callout-important
-Spatially Lagged Variables -\> exclude yourself
+    1.  **No Seasonal Data**: Avoid data that has regular fluctuations (e.g., only collected in summer and winter).
 
-Spatially Window Sum -\> including yourself
+    2.  **No Covariates**: Other factors shouldn’t influence your data. The test should only assess the trend of the specific variable you’re interested in.
 
-With the diagram on the right, is easier to tell if there is a diff between GDP per capital between East & West \[processed data\]
+    3.  **One Data Point per Time Period**: If you have multiple data points for the same time, use the median value.
 
-**We can tell there is a spatial relationship,** not all the times we have
-:::
+## EHSA Patterns
+
+-   No pattern, New hot spot, Intensifying hot spot, Diminishing hot spot, Historical hot spot, Persistent hot spot
+
+-   Consecutive hot spot -\> A place that recently became a hot spot with consecutive periods showing significant hot spot activity
+
+-   Sporadic hot spot -\> A location that is a significant hot spot in the most recent time period but has had a mixed history of being a hot spot in the past. (on & off)
+
+-   Oscillating hot spot -\> A location that is a significant hot spot in the most recent time period but has previously been a significant cold spot.
+
+## Spacetime Cube
+
+-   a structure where every location has a value for every point in time, meaning each location has a complete time series of data.
+
+-   **Key Terms**:
+
+    -   **Bin**: The basic unit of a spacetime cube, representing a specific combination of a location and a time point.
+
+    -   **Time Slice**: The collection of all bins (locations) for a specific time point.
+
+    -   **Bin Time-Series**: The collection of all bins at a particular location across different time points.
